// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Should increase the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card Test
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCard Should show the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card Test
  </h1>
</div>
`;
